# KamuraCompiler

./: .gitignore  Makefile  pyproject.toml  setup.cfg  z.py
compiler/: compiler.py
config/: character.py  character_config.json  common.py  reader.py  scene.py  scene_config.json
config/docs/: Character PDA table.html  Character grammar.txt  Character pda table.xlsx  Scene PDA table.html  Scene grammar.txt  Scene pda table.xlsx
config/tmp/compiled/: chars.json  scene_1.json
config/tmp/script/: chars.txt  scene_1.txt
example/OneDirect/compiled/: chars.json  scene_1.json
example/OneDirect/script/: scene_1.txt
lrparser/: __init__.py  parser.py  setup.py  tokenizer.py
lrparser/tests/unit/lrparser/: test_tokenizer.py
lrparser/tests/unit/lrparser/utils/: test_table.py  test_token_type.py
lrparser/utils/: abstract_table_descriptor.py  action_table_descriptor.py  exceptions.py  goto_table_descriptor.py  parser.py  table.py  table_descriptor.py  tokenizer.py
shell/: init.bat
tests/unit/lrparser/: test_tokenizer.py
tests/unit/lrparser/utils/: test_table.py  test_token_type.py
