[tool.poetry]
name = "kamuracompiler"
version = "0.1.0"
description = ""
authors = ["Resinchen <alex1410alex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"
flake8-awesome = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
